--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,6 +1,3 @@
-image:
-  file: .gitpod.Dockerfile
-  
 tasks:
     - name: test
-      init: "echo test hello > test.txt"
+      init: "echo test hello > test.txt && sleep 20 && exit 1"
