--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,3 +1,3 @@
 tasks:
     - name: test
-      init: "echo test hello > test.txt && sleep 20 && exit 1"
+      init: chomod +x print.sh && ./print.sh && echo hello > /workspace/test.test/aa.log
