--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,3 +1,3 @@
 tasks:
     - name: test
-      init: chmod +x print.sh && ./print.sh && echo hello > /workspace/test.test/aa.log
+      init: exit 1
